--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                 <img src="./images/slide2.jpg" class="d-block w-100" alt="Cicloturismo">
             </div>
             <div class="carousel-item">
-                <img src="./images/slide3.gif" class="d-block w-100" alt="Ciclas Benelli">
+                <img src="./images/slide3.jpg" class="d-block w-100" alt="Ciclas Benelli">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
